# hse-cs-architecture

Task1/: .gitignore  README.md
Task1/src/: CMakeCache.txt  CMakeLists.txt  Makefile  Task1.cbp  animal.c  animal.h  bird.c  bird.h  cmake_install.cmake  container.c  container.h  fish.c  fish.h  main.c  mammal.c  mammal.h  rectangle.c  rectangle.h  rnd.h  shape.c  shape.h  triangle.c  triangle.h
Task1/src/data/: animal.c  animal.h  bird.c  bird.h  container.c  container.h  fish.c  fish.h  mammal.c  mammal.h
Task1/src/utilities/: rnd.c  rnd.h
Task1/testsIn/: input_manual05.txt
Task1/testsOut/: output_manual01.txt  output_manual01_2.txt  output_manual05_2.txt  output_random01_1.txt  output_random02.txt
Task2/: .gitignore  README.md
Task2/src/: CMakeLists.txt  main.cpp
Task2/src/data/: Animal.cpp  Animal.h  Bird.cpp  Bird.h  Container.cpp  Container.h  Fish.cpp  Fish.h  Mammal.cpp  Mammal.h
Task2/src/utilities/: Random.cpp  Random.h
Task2/testsIn/: input_manual03.txt  input_manual04.txt
Task2/testsOut/: output_manual03_1.txt  output_manual03_2.txt  output_manual04_1.txt  output_manual04_2.txt
Task3/: README.md
Task3/src/: 1.txt  2.txt  main.py
Task3/src/data/: animal.py  bird.py  container.py  fish.py  mammal.py
Task3/testsOut/: output_manual01_1.txt  output_manual01_2.txt  output_manual03_1.txt  output_manual03_2.txt  output_manual04_1.txt  output_manual04_2.txt  output_manual05_1.txt  output_manual05_2.txt  output_random10000_1.txt  output_random10000_2.txt  output_random1000_1.txt  output_random1000_2.txt  output_random100_1.txt  output_random100_2.txt
Task4/: main.asm
Task5/: CMakeLists.txt  README.md  main.cpp
Task5/model/: Consumer.cpp  Consumer.h  Producer.cpp  Producer.h  ProducerConsumer.cpp  RingBuffer.cpp  RingBuffer.h
Task5/src/: main.cpp
Task5/src/model/: Consumer.cpp  ProducerConsumer.cpp  ProducerConsumer.h
Task5/src/utilities/: RingBuffer.cpp  RingBuffer.h
Task5/utilities/: Constants.h
